Fix: align-selfをmine.scssにて設定

--- a/app/javascript/stylesheets/boards/mine.scss
+++ b/app/javascript/stylesheets/boards/mine.scss
@@ -1,10 +1,6 @@
 .my-board-box {
   position: relative;
-}
-
-.mine-image {
-  max-width: 100%;
-  height: auto;
+  align-self: flex-start;
 }
 
 .my-icon-star {
